entity, util and helloworld modularized